ui/tui/src/render/snapshots/hub_tui__render__tests__full_screen_pr_split_first_selected.snap
---
source: ui/tui/src/render/mod.rs
expression: screen_text(&buf)
---
╭ PRs · 3 · split (v1) ───────────────────────────────────────────────────────┬───────────────────────────────────────────────────────────────────────────────────────────────────────────────────╮
│ ●  first PR with conflict marker                                            │ PR #1 · ooloth/hub                                                                                                │
│    ooloth/hub · #1 · @ooloth · no reviews                                   │                                                                                                                   │
│ ────────────────────────────────────────────────────────────────────────────│ first PR with conflict marker                                                                                     │
│ ●  second PR awaiting reviews                                               │                                                                                                                   │
│    ooloth/hub · #2 · @ooloth · no reviews                                   │   status  ●  no reviews                                                                                           │
│ ────────────────────────────────────────────────────────────────────────────│   checks     (none)                                                                                               │
│ ●  third PR fresh                                                           │   diff       +0 −0 in 0 files                                                                                     │
│    ooloth/hub · #3 · @ooloth · no reviews                                   │   branch     feat/1                                                                                               │
│                                                                             │   author     @ooloth                                                                                              │
│                                                                             │   updated    2d ago                                                                                               │
│                                                                             │                                                                                                                   │
│                                                                             │ Files changed                                                                                                     │
│                                                                             │                                                                                                                   │
│                                                                             │   (no files)                                                                                                      │
│                                                                             │                                                                                                                   │
│                                                                             │ ──────────────────────────────────────────────────────────────────────────────────────────────────────────────────│
│                                                                             │                                                                                                                   │
│                                                                             │ Description                                                                                                       │
│                                                                             │                                                                                                                   │
│                                                                             │   Body of PR #1.                                                                                                  │
│                                                                             │                                                                                                                   │
│                                                                             │                                                                                                                   │
│                                                                             │                                                                                                                   │
│                                                                             │                                                                                                                   │
│                                                                             │                                                                                                                   │
│                                                                             │                                                                                                                   │
│                                                                             │                                                                                                                   │
│                                                                             │                                                                                                                   │
│                                                                             │                                                                                                                   │
│                                                                             │                                                                                                                   │
│                                                                             │                                                                                                                   │
│                                                                             │                                                                                                                   │
│                                                                             │                                                                                                                   │
│                                                                             │                                                                                                                   │
│                                                                             │                                                                                                                   │
│                                                                             │                                                                                                                   │
│                                                                             │                                                                                                                   │
╰─────────────────────────────────────────────────────────────────────────────┴───────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯
  1/3 · [i] investigate · [o] octo · [l] lazygit · [v] review · [m] merge · [Esc] back
