ui/tui/src/render/snapshots/hub_tui__render__tests__full_screen_pr_split_last_selected.snap
---
source: ui/tui/src/render/mod.rs
expression: screen_text(&buf)
---
╭ PRs · 3 · split (v1) ───────────────────────────────────────────────────────┬───────────────────────────────────────────────────────────────────────────────────────────────────────────────────╮
│ ●  first PR with conflict marker                                            │ PR #3 · ooloth/hub                                                                                                │
│    no reviews · 2d  ·  ooloth/hub · #1                                      │                                                                                                                   │
│ ────────────────────────────────────────────────────────────────────────────│ third PR fresh                                                                                                    │
│ ●  second PR awaiting reviews                                               │                                                                                                                   │
│    no reviews · 2d  ·  ooloth/hub · #2                                      │   status  ●  no reviews                                                                                           │
│ ────────────────────────────────────────────────────────────────────────────│   checks     (none)                                                                                               │
│ ●  third PR fresh                                                           │   diff       +0 −0 in 0 files                                                                                     │
│    no reviews · 2d  ·  ooloth/hub · #3                                      │   branch     feat/3                                                                                               │
│                                                                             │   author     @ooloth                                                                                              │
│                                                                             │   updated    2d ago                                                                                               │
│                                                                             │                                                                                                                   │
│                                                                             │ Files changed                                                                                                     │
│                                                                             │                                                                                                                   │
│                                                                             │   (no files)                                                                                                      │
│                                                                             │                                                                                                                   │
│                                                                             │ ──────────────────────────────────────────────────────────────────────────────────────────────────────────────────│
│                                                                             │                                                                                                                   │
│                                                                             │ Description                                                                                                       │
│                                                                             │                                                                                                                   │
│                                                                             │   Body of PR #3.                                                                                                  │
│                                                                             │                                                                                                                   │
│                                                                             │                                                                                                                   │
│                                                                             │                                                                                                                   │
│                                                                             │                                                                                                                   │
│                                                                             │                                                                                                                   │
│                                                                             │                                                                                                                   │
│                                                                             │                                                                                                                   │
│                                                                             │                                                                                                                   │
│                                                                             │                                                                                                                   │
│                                                                             │                                                                                                                   │
│                                                                             │                                                                                                                   │
│                                                                             │                                                                                                                   │
│                                                                             │                                                                                                                   │
│                                                                             │                                                                                                                   │
│                                                                             │                                                                                                                   │
│                                                                             │                                                                                                                   │
│                                                                             │                                                                                                                   │
╰─────────────────────────────────────────────────────────────────────────────┴───────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯
  3/3 · [i] investigate · [o] octo · [l] lazygit · [v] review · [m] merge · [Esc] back
