ui/tui/src/render/snapshots/hub_tui__render__tests__full_screen_pr_split_narrow_terminal.snap
---
source: ui/tui/src/render/mod.rs
expression: screen_text(&buf)
---
╭ PRs · 2 · split (v1) ─────────────────────╮╭ PR #1 · ooloth/hub ─────────────────────────────────╮
│ ●  no reviews · 2d                        ││first PR title that is long enough to wrap           │
│    first PR title that is long enough to  ││                                                     │
│    wrap                                   ││  status  ●  no reviews                              │
│    ooloth/hub · #1                        ││  checks     (none)                                  │
│ ──────────────────────────────────────────││  diff       +0 −0 in 0 files                        │
│ ●  no reviews · 2d                        ││  branch     feat/1                                  │
│    second PR                              ││  author     @ooloth                                 │
│    ooloth/hub · #2                        ││  updated    2d ago                                  │
│                                           ││                                                     │
│                                           ││Files changed                                        │
│                                           ││                                                     │
│                                           ││  (no files)                                         │
│                                           ││                                                     │
│                                           ││─────────────────────────────────────────────────────│
│                                           ││                                                     │
│                                           ││Description                                          │
│                                           ││  +2 more lines · vim-scroll coming in v2 (#240)     │
╰───────────────────────────────────────────╯╰─────────────────────────────────────────────────────╯
  1/2 · [i] investigate · [o] octo · [l] lazygit · [v] review · [m] merge · [Esc] back
