ui/tui/src/render/snapshots/hub_tui__render__tests__full_screen_unified_list_backlog_and_ready_tasks.snap
---
source: ui/tui/src/render/mod.rs
expression: screen_text(&buf)
---
╭ All ─────────────────────────────────────────────────────────────────────────╮
│Agent · TASK-0001 · Implement feature X backlog · implement                now│
│Agent · TASK-0001 · Implement feature X ready · implement                  now│
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
╰──────────────────────────────────────────────────────────────────────────────╯
 1/2 · [↩] details · [s] status · [p] prs · [O] issues · [e] errors · [/] searc
