ui/tui/src/render/snapshots/hub_tui__render__tests__full_screen_unified_list_category_filter.snap
---
source: ui/tui/src/render/mod.rs
expression: screen_text(&buf)
---
╭ Errors ──────────────────────────────────────────────────────────────────────╮
│CI · check / fmt · failed                                     ooloth/hub · now│
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
╰──────────────────────────────────────────────────────────────────────────────╯
 1/1 · [↩] details · [n/N] new task · [p] prs · [O] issues · [e] errors · [/] s
