ui/tui/src/render/snapshots/hub_tui__render__tests__full_screen_unified_list_committed_query.snap
---
source: ui/tui/src/render/mod.rs
expression: screen_text(&buf)
---
╭ "hub" ───────────────────────────────────────────────────────────────────────╮
│● check / fmt · failed — ooloth/hub                                    CI  now│
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
╰──────────────────────────────────────────────────────────────────────────────╯
1/1 · Press ↩ to open https://github.com/ooloth/hub/actions/runs/25608685802 · P
