ui/tui/src/render/snapshots/hub_tui__render__tests__full_screen_unified_list_dev_profile.snap
---
source: ui/tui/src/render/mod.rs
expression: screen_text(&buf)
---
╭ All ─────────────────────────────────────────────────────────────────────────╮
│PR · Fix #1 · alice · no reviews                              owner/repo · now│
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
╰──────────────────────────────────────────────────────────────────────────────╯
 1/1 · [↩] details · [p] prs · [O] issues · [e] errors · [/] search · [i] i dev
