ui/tui/src/render/snapshots/hub_tui__render__tests__full_screen_unified_list_empty_filter_result.snap
---
source: ui/tui/src/render/mod.rs
expression: screen_text(&buf)
---
╭ Errors ──────────────────────────────────────────────────────────────────────╮
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
╰──────────────────────────────────────────────────────────────────────────────╯
  · [↩] details · [n/N] new task · [p] prs · [O] issues · [e] errors · [/] sear
