ui/tui/src/render/snapshots/hub_tui__render__tests__full_screen_unified_list_group_selected.snap
---
source: ui/tui/src/render/mod.rs
expression: screen_text(&buf)
---
╭ All ─────────────────────────────────────────────────────────────────────────╮
│CI ▸ check / fmt · failed (1)                                 ooloth/hub · now│
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
╰──────────────────────────────────────────────────────────────────────────────╯
 1/1 · [↩] expand/collapse
