ui/tui/src/render/snapshots/hub_tui__render__tests__full_screen_unified_list_help_popup.snap
---
source: ui/tui/src/render/mod.rs
expression: screen_text(&buf)
---
╭ All ─────────────────────────────────────────────────────────────────────────╮
│CI · check / fmt · failed                                     ooloth/hub · now│
│                                                                              │
│             ┌ Keybinds ────────────────────────────────────────┐             │
│             │  ?                 toggle help                   │             │
│             │  k / j             up / down                     │             │
│             │  gg / G            go to top / bottom            │             │
│             │  Ctrl-u / Ctrl-d   page up / down                │             │
│             │  h / l             collapse / expand group       │             │
│             │  Enter             open                          │             │
│             │  i                 investigate                   │             │
│             │  p / e / o         filter PRs / Errors / Issues  │             │
│             │  /                 search                        │             │
│             │  a / Esc           clear filter                  │             │
│             │  r                 refresh                       │             │
│             │  q / Ctrl-C        quit                          │             │
│             └──────────────────────────────────────────────────┘             │
│                                                                              │
╰──────────────────────────────────────────────────────────────────────────────╯
 1/1 · [i] investigate
