ui/tui/src/render/snapshots/hub_tui__render__tests__full_screen_unified_list_mixed_urgency.snap
---
source: ui/tui/src/render/mod.rs
expression: screen_text(&buf)
---
╭ All ─────────────────────────────────────────────────────────────────────────╮
│● CI · check / fmt · failed                                   ooloth/hub · now│
├──────────────────────────────────────────────────────────────────────────────┤
│● PR · Fix #1 · alice · 0 reviews                             owner/repo · now│
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
╰──────────────────────────────────────────────────────────────────────────────╯
 1/2 · [↩] open · [i] investigate
